# almond

./: .gitignore  Cargo.toml  README.md
assets/: scratch.aseprite
devlogs/: 001.md
src/: ai.rs  animator.rs  brain.rs  camera.rs  components.rs  engine.rs  game.rs  gameplay.rs  grid.rs  hud.rs  input.rs  keyboard.rs  main.rs  map.rs  pathfinder.rs  physics.rs  renderer.rs  scheduler.rs  systems.rs  ui.rs  util.rs
src/debug/: renderer.rs
src/engine/: engine.rs  resource.rs  text.rs
src/game/: components.rs  debug.rs  game.rs  graphics.rs
src/gameplay/: action.rs  construction.rs  housing.rs  stats.rs
src/input/: keyboard.rs  mouse.rs
src/input/mouse/: action.rs  clickable.rs
src/systems/: ai.rs  animator.rs  grid.rs  physics.rs  renderer.rs  turn.rs
src/ui/: hud.rs  renderer.rs
